Optima1.0/WebContent/css/app.css
body{
	font: 62.5% "Trebuchet MS", sans-serif;
	margin: 0px;
	padding: 0px;
	font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
	
}

#moduleContainer{
	margin: 0 auto;
	padding:40px;
	width: 85%;
}

#FinPeriods {
	width: 100%;
	
}

#payments {
	padding: 20px;
	width:90%;
	display: table;
}

#projectWrapper{
	margin: 0 auto;
	width:1150px;
}

textarea {
    width: 76%;
    border-radius:4px;
}

select{
	width:82% !important;
	padding: 10px 8px !important;
	background: none  #FFFFFF !important;
	border: 1px solid #D3D3D3 !important;
    border-collapse: separate !important;
    border-radius: 4px 4px 4px 4px !important;
    color:#000 !important;
}

select option{
	color:#000 !important;
}


#main .ui-tabs-nav{
	border:0px !important;
}

#main > div{
	border-top: 1px solid #D4CCB0;
}

/* CSSTidy 1.2: Sun Sep 29 01:28:31 2013 */
.gantt,.gantt2 {
width:100%;
max-width: 1050px;
border:14px solid #ddd;
position:relative;
-webkit-border-radius:6px;
-moz-border-radius:6px;
border-radius:6px;
-webkit-box-sizing:border-box;
-moz-box-sizing:border-box;
box-sizing:border-box;
margin:20px auto;
}

.gantt:after {
content:".";
visibility:hidden;
display:block;
height:0;
clear:both;
}

.fn-gantt {
width:100%;
}

.fn-gantt .fn-content {
overflow:hidden;
position:relative;
width:100%;
}


.fn-gantt .leftPanel {
float:left;
width:225px;
overflow:hidden;
border-right:1px solid #DDD;
position:relative;
z-index:20;
}

.fn-gantt .row {
float:left;
height:24px;
line-height:24px;
margin-left:-1px;
}

.fn-gantt .leftPanel .fn-label {
display:inline-block;
color:#484A4D;
width:110px;
white-space:nowrap;
text-overflow:ellipsis;
overflow:hidden;
margin:0 0 0 5px;
}

.fn-gantt .leftPanel .row0 {
border-top:1px solid #DDD;
}

.fn-gantt .leftPanel .name,.fn-gantt .leftPanel .desc {
float:left;
height:23px;
border-bottom:1px solid #DDD;
background-color:#FFF0D3;
margin:0;
}

.fn-gantt .leftPanel .name {
width:110px;
font-weight:700;
}

.fn-gantt .leftPanel .desc {
width:115px;
}

.fn-gantt .leftPanel .fn-wide,.fn-gantt .leftPanel .fn-wide .fn-label {
width:225px;
}

.fn-gantt .spacer {
border-bottom:none;
background-color:#FFF0D3;
margin:-2px 0 1px;
}

.fn-gantt .rightPanel {
overflow:hidden;
}

.fn-gantt .scoll-container {
overflow-y:auto;
overflow-x:hidden;
max-height:450px;	
}

.fn-gantt .dataPanel {
margin-left:0;
border-right:1px solid #DDD;
background-image:url(../images/grid.png);
background-repeat:repeat;
background-position:24px 24px;
position:relative;
}

.fn-gantt .day,.fn-gantt .date {
overflow:visible;
width:24px;
line-height:24px;
border-left:1px solid #DDD;
border-bottom:1px solid #DDD;
font-size:11px;
color:#484a4d;
text-shadow:0 1px 0 rgba(255,255,255,0.75);
text-align:center;
margin:-1px 0 0 -1px;
}

.fn-gantt .holiday {
background-color:#ffd263;
height:23px;
margin:0 0 -1px -1px;
}

.fn-gantt .today {
background-color:#fff8da;
height:23px;
font-weight:700;
text-align:center;
margin:0 0 -1px -1px;
}

.fn-gantt .sa,.fn-gantt .sn,.fn-gantt .wd {
height:23px;
text-align:center;
margin:0 0 0 -1px;
}

.fn-gantt .sa,.fn-gantt .sn {
color:#000;
background-color:#FDD587;
text-align:center;
}

.fn-gantt .wd {
background-color:#FFF0D3;
text-align:center;
}

.fn-gantt .rightPanel .month,.fn-gantt .rightPanel .year {
float:left;
overflow:hidden;
border-left:1px solid #DDD;
border-bottom:1px solid #DDD;
height:23px;
background-color:#FFF0D3;
font-weight:700;
font-size:11px;
color:#484a4d;
text-shadow:0 1px 0 rgba(255,255,255,0.75);
text-align:center;
margin:0 0 0 -1px;
}

.fn-gantt-hint {
border:5px solid #edc332;
background-color:#fff5d4;
position:absolute;
display:none;
z-index:11;
-webkit-border-radius:4px;
-moz-border-radius:4px;
border-radius:4px;
padding:10px;
}

.fn-gantt .bar {
background-color:#D0E4FD;
height:18px;
position:absolute;
z-index:10;
text-align:center;
-webkit-box-shadow:0 0 1px rgba(0,0,0,0.25) inset;
-moz-box-shadow:0 0 1px rgba(0,0,0,0.25) inset;
box-shadow:0 0 1px rgba(0,0,0,0.25) inset;
-webkit-border-radius:3px;
-moz-border-radius:3px;
border-radius:3px;
margin:4px 3px 3px;
}

.fn-gantt .bar .fn-label {
line-height:18px;
font-weight:700;
white-space:nowrap;
width:100%;
text-overflow:ellipsis;
overflow:hidden;
text-shadow:0 1px 0 rgba(255,255,255,0.4);
color:#414B57 !important;
text-align:center;
font-size:11px;
}

.fn-gantt .ganttRed {
background-color:#FFA500;
}

.fn-gantt .ganttRed .fn-label {
color:#000 !important;
}

.fn-gantt .ganttGreen {
background-color:#D8EDA3;
}

.fn-gantt .ganttGreen .fn-label {
color:#778461 !important;
}

.fn-gantt .ganttOrange {
background-color:#FCD29A;
}

.fn-gantt .ganttOrange .fn-label {
color:#714715 !important;
}

.fn-gantt .bottom {
clear:both;
background-color:#FFF0D3;
width:100%;
}

.fn-gantt .navigate {
border-top:1px solid #DDD;
padding:10px 20px 10px 225px;
}

.fn-gantt .navigate .nav-slider {
height:20px;
display:inline-block;
position:relative;
width:100%;
}

.fn-gantt .navigate .nav-slider-left,.fn-gantt .navigate .nav-slider-right {
text-align:center;
height:20px;
display:inline-block;
}

.fn-gantt .navigate .nav-slider-left {
float:left;
display:none;
}

.fn-gantt .navigate .nav-slider-right {
float:right;
display:none;
}

.fn-gantt .navigate .nav-slider-content {
text-align:left;
width:100%;
height:20px;
display:inline-block;
margin:0 10px;
}

.fn-gantt .navigate .nav-slider-bar,.fn-gantt .navigate .nav-slider-button {
position:absolute;
display:block;
}

.fn-gantt .navigate .nav-slider-bar {
width:100%;
height:6px;
background-color:#838688;
-webkit-box-shadow:0 1px 3px rgba(0,0,0,0.6) inset;
-moz-box-shadow:0 1px 3px rgba(0,0,0,0.6) inset;
box-shadow:0 1px 3px rgba(0,0,0,0.6) inset;
-webkit-border-radius:3px;
-moz-border-radius:3px;
border-radius:3px;
margin:8px 0 0;
}

.fn-gantt .navigate .nav-slider-button {
width:17px;
height:60px;
background:url(../images/slider_handle.png) center center no-repeat;
left:0;
top:0;
cursor:pointer;
margin:-26px 0 0;
}
/* ... */

